--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^1.6.27
+  http: 0.12.1
 
 
   # The following adds the Cupertino Icons font to your application.
